--- a/ejercicioDos.html
+++ b/ejercicioDos.html
@@ -13,50 +13,51 @@
         <ol>
             <li>Diseño Web:</li>
             <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Git y Github</li>
+                 <li>HTML</li>
+                 <li>CSS</li>
+                 <li>Git y Github</li>
             </ul>
             <li>Programación Web:</li>
             <ul>
-                <li>Javascript</li>
+                 <li>Javascript</li>
             </ul>
             <li>Programación Web Avanzada:</li>
             <ul>
-                <li>ReactJs</li>
+                 <li>ReactJs</li>
             </ul>
             <li>Backend:</li>
             <ul>
-                <li>NodeJs</li>
-                <li>Base de datos</li>
+                 <li>NodeJs</li>
+                 <li>Base de datos</li>
             </ul>
         </ol>
     </div>
 
     <div>
         <h2>Modalidad de cursada</h2>
-        <ol>
+        <ul>
             <li><h3>Contenido en vivo:</h3></li>
             <ul>
-                <li>Clases online en zoom</li>
-                <li>Meetups</li>
-                <li>Clases de Repaso</li>
+                 <li>Clases online en zoom</li>
+                 <li>Meetups</li>
+                 <li>Clases de Repaso</li>
             </ul>
             <li><h3>Contenido Teórico-práctico</h3></li>
             <ul>
-                <li>Teórico</li>
+                <li>Teórico:</li>
                 <ul>
-                    <li>Documentaciones</li>
-                    <li>Artículos de interes</li>
+                     <li>Documentaciones</li>
+                     <li>Artículos de interes</li>
                 </ul>
                 <li>Práctico:</li>
                 <ul>
-                    <li>Desafío</li>
-                    <li>Entregas</li>
+                     <li>Desafíos</li>
+                     <li>Entregas</li>
                 </ul>
             </ul>
-        </ol>
+        </ul>
     </div>
+    <br>
     <br>
     <a href="./index.html">Volver</a>
 
