--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
         </ul>
         <br>
         <br>
-        <a href="./ejercicioDos.html">Ejercicio Dos</a>
         <br>
-        <a href="./ejerccioTres.html">Ejercicio Tres</a>
+        <a href="./ejercicioDos.html">Carolina Acosta: Ejercicio 2</a>
+        <br>
+        <a href="./ejerccioTres.html">Carolina Acosta: Ejercicio 3</a>
    </div>
 </body>
 </html>
